Temp/submissions/217d759e-33c8-4c50-a277-521a6ea548ae/compile_error.txt
main.c: In function 'main':
main.c:6:1: error: 'e' undeclared (first use in this function)
    6 | e
      | ^
main.c:6:1: note: each undeclared identifier is reported only once for each function it appears in
main.c:6:2: error: expected ';' before 'if'
    6 | e
      |  ^
      |  ;
    7 |     if (scanf("%d", &n) != 1) {
      |     ~~
